# jc3-rs

./: .gitignore  Cargo.toml  README.md  game_dir
src/: main.rs
src/file_formats/: archive_table.rs  cool_archive.rs  dds_file.rs  file_lists.rs  mod.rs  packed_archive.rs  texture.rs  texture_file.rs
src/file_formats/texture_serializers/: dds_file.rs  mod.rs  png_file.rs  texture_serializer.rs  webp_file.rs
src/helpers/: byte.rs  error.rs  mod.rs  serializable.rs
src/util/: jenkins.rs  mod.rs
